Finished open api area, removed unneeded files, minor fixes

--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -54,6 +54,7 @@ pre.highlight {
   overflow: auto;
   position: relative;
   background: $black;
+  border-radius: 4px;
 
   code {
     color: $grey-light;
