--- a/app/views/layouts/partials/api/_voice.html.erb
+++ b/app/views/layouts/partials/api/_voice.html.erb
@@ -1,77 +1,68 @@
 <div id="Vlt-sidenav" class="Vlt-sidenav Vlt-sidenav--light js-scrollspy">
   <div class="Vlt-sidenav__scroll navigation js-navigation">
-    <ul class="Vlt-sidemenu Vlt-sidemenu--rounded">
-      <li>
-        <li role="separator"><h5 class="Vlt-sidemenu__title">Voice</h5></li>        
+    <ul class="Vlt-sidemenu Vlt-sidemenu--rounded Vlt-sidemenu--flat">
+        <li><a class="Vlt-sidemenu__link" href="#voice-api-reference">Voice</a> 
+        <ul>       
           <li>
-            <p class="Vlt-sidemenu__trigger">Calls</a>
+            <a class="Vlt-sidemenu__link" href="#calls">Calls</a>
             <ul>
               <li>
                 <a class="Vlt-sidemenu__link" href="#create-an-outbound-call">
-                  <span class="label label--code label--positive">POST</span>
                   Create an outbound Call
                 </a>
               </li>
               <li>
                 <a class="Vlt-sidemenu__link" href="#retrieve-information-about-all-your-calls">
-                  <span class="label label--code">GET</span>
                   Retrieve information about all your Calls
                 </a>
               </li>
               <li>
                 <a class="Vlt-sidemenu__link" href="#retrieve-information-about-a-single-call">
-                  <span class="label label--code">GET</span>
                   Retrieve information about a single Call
                 </a>
               </li>
               <li>
                 <a class="Vlt-sidemenu__link" href="#modify-an-existing-call">
-                  <span class="label label--code label--warning">PUT</span>
                   Modify an existing Call
                 </a>
               </li>
             </ul>
           </li>
           <li>
-            <p class="Vlt-sidemenu__trigger">Stream</a>
+            <a class="Vlt-sidemenu__link" href="#stream">Stream</a>
             <ul>
               <li>
                 <a class="Vlt-sidemenu__link" href="#stream-an-audio-file-to-an-active-call">
-                  <span class="label label--code label--warning">PUT</span>
                   Stream an audio file to an active Call
                 </a>
               </li>
               <li>
                 <a class="Vlt-sidemenu__link" href="#stop-streaming-an-audio-file-to-an-active-call">
-                  <span class="label label--code label--negative">DELETE</span>
                   Stop streaming an audio file to an active Call
                 </a>
               </li>
             </ul>
           </li>
           <li>
-            <p class="Vlt-sidemenu__trigger">Talk</a>
+            <a class="Vlt-sidemenu__link" href="#talk">Talk</a>
             <ul>
               <li>
                 <a class="Vlt-sidemenu__link" href="#send-a-synthesized-speech-message-to-an-active-call">
-                  <span class="label label--code label--warning">PUT</span>
                   Send a synthesized speech message to an active Call
                 </a>
               </li>
               <li>
                 <a class="Vlt-sidemenu__link" href="#stop-sending-a-synthesized-speech-message-to-an-active-call">
-                  <span class="label label--code label--negative">DELETE</span>
                   Stop sending a synthesized speech message to an active Call
                 </a>
               </li>
             </ul>
           </li>
           <li>
-            <p class="Vlt-sidemenu__trigger">DTMF</a>
+            <a class="Vlt-sidemenu__link" href="#dtmf">DTMF</a>
             <ul>
               <li>
                 <a class="Vlt-sidemenu__link" href="#send-dual-tone-multi-frequency-dtmf-tones-to-an-active-call">
-                  <span class="label label--code label--warning">PUT</span>
                   Send Dual-tone multi-frequency (DTMF) tones to an active Call
                 </a>
               </li>
@@ -86,7 +77,8 @@
           <li>
             <a class="Vlt-sidemenu__link" href="#errors">Errors</a>
           </li>
-      </li>
+        </ul>
+        </li>
     </ul>
   </div>
 </div>
