--- a/app/views/open_api/_callback_endpoint.html.erb
+++ b/app/views/open_api/_callback_endpoint.html.erb
@@ -15,9 +15,9 @@
         <p><%= endpoint.description.render_markdown %></p>
       <% end %>
 
-      <div class="api-path">
-        <span class="api-path-method api-path-method--<%= endpoint.method %>"><%= endpoint.method.upcase %></span>
-        <code>
+      <div class="Vlt-badge-group">
+        <code class="Vlt-badge Vlt-badge--large Vlt-badge--<%= endpoint.method == 'post' ? 'green' : 'blue' %>"><%= endpoint.method.upcase %></code>
+        <code class="Vlt-badge Vlt-badge--large Vlt-badge--grey">
           <span class="api-path-host">https://example.com</span>
           <%= (endpoint.raw['x-example-path'] || '/webhooks/event').gsub(/\{(.+?)\}/, '<span class="api-path-parameter">:\1</span>').html_safe %>
         </code>
