--- a/app/views/open_api/_endpoint.html.erb
+++ b/app/views/open_api/_endpoint.html.erb
@@ -6,11 +6,10 @@
         <%= content_tag :p, endpoint.description.render_markdown %>
       <% end %>
 
-      <div class="api-path">
-        <span class="api-path-method api-path-method--<%= endpoint.method %>"><%= endpoint.method.upcase %></span>
-        <code>
-          <span class="api-path-host"><%= endpoint.definition.servers[0]['url'] %></span>
-          <%= endpoint.path.path.gsub(/\{(.+?)\}/, '<span class="api-path-parameter">:\1</span>').html_safe %>
+      <div class="Vlt-badge-group">
+        <code class="Vlt-badge Vlt-badge--large Vlt-badge--<%= endpoint.method == 'post' ? 'green' : 'blue' %>"><%= endpoint.method.upcase %></code>
+        <code class="Vlt-badge Vlt-badge--large Vlt-badge--grey">
+          <span><%= endpoint.definition.servers[0]['url'] %></span><%= endpoint.path.path.gsub(/\{(.+?)\}/, '<span class="api-path-parameter">:\1</span>').html_safe %>
         </code>
       </div>
 
