--- a/app/views/static/tools.html.erb
+++ b/app/views/static/tools.html.erb
@@ -5,12 +5,12 @@
 
 <div class="Vlt-grid Vlt-grid--margin-top3">
   <div class="Vlt-col Vlt-col--1of3">
-    <a href="https://github.com/Nexmo/nexmo-ruby" class="Vlt-card github-card" data-github="Nexmo/nexmo-ruby">
+    <a href="https://github.com/Nexmo/nexmo-ruby" class="Vlt-card Nxd-github-card" data-github="Nexmo/nexmo-ruby">
       <h3 class="Vlt-blue-dark">nexmo-ruby</h3>
       <p>Nexmo REST API client for Ruby</p>
-      <img src="//badge.fury.io/rb/nexmo.svg" class="github-card__badge" height="18">
+      <img src="//badge.fury.io/rb/nexmo.svg" class="Nxd-github-card__badge" height="18">
       <p>
-        <small class="github-card__meta">
+        <small class="Nxd-github-card__meta">
           <span>
             <span class="Vlt-red-dark">●</span> Ruby
           </span>
@@ -32,12 +32,12 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of3">
-    <a href="https://github.com/Nexmo/nexmo-php" class="Vlt-card github-card" data-github="Nexmo/nexmo-php">
+    <a href="https://github.com/Nexmo/nexmo-php" class="Vlt-card Nxd-github-card" data-github="Nexmo/nexmo-php">
       <h3 class="Vlt-blue-dark">nexmo-php</h3>
       <p>Nexmo REST API client for PHP</p>
-      <img src="//badge.fury.io/ph/nexmo%2Fclient.svg" class="github-card__badge" height="18">
+      <img src="//badge.fury.io/ph/nexmo%2Fclient.svg" class="Nxd-github-card__badge" height="18">
       <p>
-        <small class="github-card__meta">
+        <small class="Nxd-github-card__meta">
           <span>
             <span class="Vlt-blue-dark">●</span> PHP
           </span>
@@ -59,12 +59,12 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of3">
-    <a href="https://github.com/Nexmo/nexmo-python" class="Vlt-card github-card" data-github="Nexmo/nexmo-python">
+    <a href="https://github.com/Nexmo/nexmo-python" class="Vlt-card Nxd-github-card" data-github="Nexmo/nexmo-python">
       <h3 class="Vlt-blue-dark">nexmo-python</h3>
       <p>Nexmo REST API client for Python</p>
-      <img src="//badge.fury.io/py/nexmo.svg" class="github-card__badge" height="18">
+      <img src="//badge.fury.io/py/nexmo.svg" class="Nxd-github-card__badge" height="18">
       <p>
-        <small class="github-card__meta">
+        <small class="Nxd-github-card__meta">
           <span>
             <span class="Vlt-blue-darker">●</span> Python
           </span>
@@ -86,12 +86,12 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of3">
-    <a href="https://github.com/Nexmo/nexmo-dotnet" class="Vlt-card github-card" data-github="Nexmo/nexmo-dotnet">
+    <a href="https://github.com/Nexmo/nexmo-dotnet" class="Vlt-card Nxd-github-card" data-github="Nexmo/nexmo-dotnet">
       <h3 class="Vlt-blue-dark">nexmo-dotnet</h3>
       <p>Nexmo REST API client for .NET</p>
-      <img src="//badge.fury.io/nu/nexmo.svg" class="github-card__badge" height="18">
+      <img src="//badge.fury.io/nu/nexmo.svg" class="Nxd-github-card__badge" height="18">
       <p>
-        <small class="github-card__meta">
+        <small class="Nxd-github-card__meta">
           <span>
             <span class="Vlt-green-dark">●</span> C#
           </span>
@@ -113,12 +113,12 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of3">
-    <a href="https://github.com/Nexmo/nexmo-node" class="Vlt-card github-card" data-github="Nexmo/nexmo-node">
+    <a href="https://github.com/Nexmo/nexmo-node" class="Vlt-card Nxd-github-card" data-github="Nexmo/nexmo-node">
       <h3 class="Vlt-blue-dark">nexmo-node</h3>
       <p>Nexmo REST API client for Node.js</p>
-      <img src="//badge.fury.io/js/nexmo.svg" class="github-card__badge" height="18">
+      <img src="//badge.fury.io/js/nexmo.svg" class="Nxd-github-card__badge" height="18">
       <p>
-        <small class="github-card__meta">
+        <small class="Nxd-github-card__meta">
           <span>
             <span class="Vlt-yellow">●</span> JavaScript
           </span>
@@ -140,12 +140,12 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of3">
-    <a href="https://github.com/Nexmo/nexmo-java" class="Vlt-card github-card" data-github="Nexmo/nexmo-java">
+    <a href="https://github.com/Nexmo/nexmo-java" class="Vlt-card Nxd-github-card" data-github="Nexmo/nexmo-java">
       <h3 class="Vlt-blue-dark">nexmo-java</h3>
       <p>Nexmo REST API client for Java</p>
-      <img src="//badge.fury.io/gh/nexmo%2Fnexmo-java.svg" class="github-card__badge" height="18">
+      <img src="//badge.fury.io/gh/nexmo%2Fnexmo-java.svg" class="Nxd-github-card__badge" height="18">
       <p>
-        <small class="github-card__meta">
+        <small class="Nxd-github-card__meta">
           <span>
             <span class="Vlt-orange-dark">●</span> Java
           </span>
@@ -176,12 +176,12 @@
 
 <div class="Vlt-grid Vlt-grid--margin-top3">
   <div class="Vlt-col Vlt-col--1of3">
-    <a href="https://github.com/Nexmo/nexmo-cli" class="Vlt-card github-card" data-github="Nexmo/nexmo-cli">
+    <a href="https://github.com/Nexmo/nexmo-cli" class="Vlt-card Nxd-github-card" data-github="Nexmo/nexmo-cli">
       <h3 class="Vlt-blue-dark">nexmo-cli</h3>
       <p>Nexmo CLI (Command Line Interface) </p>
-      <img src="//badge.fury.io/js/nexmo-cli.svg" class="github-card__badge" height="18">
+      <img src="//badge.fury.io/js/nexmo-cli.svg" class="Nxd-github-card__badge" height="18">
       <p>
-        <small class="github-card__meta">
+        <small class="Nxd-github-card__meta">
           <span>
             <span class="Vlt-yellow">●</span> JavaScript
           </span>
