js: fix tooltips

--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -64,5 +64,5 @@
 </footer>
 
 <script type="text/javascript">
-  Volta.init(['accordion, tooltip']);
+  Volta.init(['accordion', 'tooltip']);
 </script>
