--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -75,6 +75,7 @@ $font-family: 'Lato', sans-serif;
 @import "../volta/scss/components/tabs";
 @import "../volta/scss/components/lists";
 @import "../volta/scss/components/accordions";
+@import "../volta/scss/components/tooltips";
 
 @import "../volta/scss/layout/article";
 
