--- a/app/assets/volta/scss/components/_buttons.scss
+++ b/app/assets/volta/scss/components/_buttons.scss
@@ -48,6 +48,7 @@ $shadow-tertiary: inset 0 0 0px 1px $grey;
 		height: 20px;
 		margin-left: -5px;
 		margin-right: 6px;
+		margin-top: -2px;
 		vertical-align: middle;
 		width: 20px;
 	}
@@ -121,6 +122,7 @@ $shadow-tertiary: inset 0 0 0px 1px $grey;
 
 	svg {
 		height: 24px;
+		margin-top: -4px;
 		width: 24px;
 
 		&  span {
